Style flex wrap bug fix

--- a/src/app/metrics/top-genres/top-genres.component.css
+++ b/src/app/metrics/top-genres/top-genres.component.css
@@ -5,7 +5,7 @@ ol {
   margin-right: auto;
   display: flex;
   flex-flow: column;
-  flex-wrap: wrap;
+  flex-wrap: wrap!important;
   list-style: none;
 }
 
