--- a/src/app/metrics/top-movies/top-movies.component.css
+++ b/src/app/metrics/top-movies/top-movies.component.css
@@ -16,7 +16,7 @@ ol {
   white-space: nowrap;
   display: flex;
   flex-flow: column;
-  flex-wrap: wrap;
+  flex-wrap: wrap!important;
   list-style: none;
 }
 
